added paseto access token maker and verifier. Added fake user inyected as config param for testing purposes.
